[package]
name = "daemons"
version = "0.9.1"
authors = ["mendess <pedro.mendes.26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", optional = true }
futures.workspace = true
humantime = { version = "2", optional = true }
log.workspace = true

[dependencies.tokio]
workspace = true
features = ["time", "sync", "rt", "tracing"]

[dev-dependencies]
tokio = { workspace = true, features = ["time", "sync", "rt-multi-thread", "macros"] }
simple_logger = "1"
chrono = "0.4.19"

[features]
cron = ["dep:chrono", "dep:humantime"]
