[package]
name = "pubsub"
version = "0.1.1"
edition = "2021"

[dependencies]
daemons = { path = "../daemons" }
futures.workspace = true
log.workspace = true
tokio.workspace = true

[dependencies.serenity]
workspace = true
features = ["client", "rustls_backend", "builder", "gateway", "model"]

[features]
serenity_cache = ["serenity/cache"]

