[package]
name = "pubsub"
version = "0.1.2"
edition = "2021"

[dependencies]
futures.workspace = true
log.workspace = true
tokio.workspace = true

[dependencies.serenity]
workspace = true
features = ["client", "rustls_backend", "builder", "gateway", "model"]

[features]
serenity_cache = ["serenity/cache"]

